@@ -78,10 +78,12 @@ struct delegpt_addr* iter_server_selection(struct iter_env* iter_env,
 
 /**
  * Allocate dns_msg from parsed msg, in region.
+ * @param pkt: packet.
  * @param msg: parsed message (cleaned and ready for region allocation).
  * @param region: region to use for allocation.
  * @return newly allocated dns_msg, or NULL on memory error.
  */
-struct dns_msg* dns_alloc_msg(struct msg_parse* msg, struct region* region);
+struct dns_msg* dns_alloc_msg(ldns_buffer* pkt, struct msg_parse* msg, 
+	struct region* region);
 
 #endif /* ITERATOR_ITER_UTILS_H */
